[package]
name = "private-twitter-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
serde_json = "1.0.83"
regex = { version = "1.6.0", default-features = false, features = ["std", "perf", "unicode-perl"] }

# [dev-dependencies]
# tokio = { version = "1.20.1", features = ["full"] }