[package]
name = "private-twitter-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
serde_json = "1.0.83"
once_cell = "1.13.0"
# [dev-dependencies]                     # mutex  # test
tokio = { version = "1.20.1", default-features = false, features = ["sync", "macros"] }
